--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ tokio = { version = "1", features = ["full"] }
 # Web 框架
 axum = { version = "0.7", features = ["multipart", "ws"] }
 tower = { version = "0.4", features = ["util"] }
-tower-http = { version = "0.5", features = ["cors", "trace"] }
+tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
 http = "1.0"
 
 # HTTP 客户端
@@ -57,6 +57,11 @@ md5 = "0.7"
 # Futures 工具
 futures-util = "0.3"
 tokio-util = { version = "0.7.18", features = ["io"] }
+
+# 音频处理
+symphonia = { version = "0.5", features = ["wav"] }
+opus = "0.3"
+ogg = "0.9"
 
 [dev-dependencies]
 tempfile = "3"
